# XeniumCluster

./: .gitignore  BayXenSmooth_wss.ipynb  BayesSpace.ipynb  BayesSpace.py  BayesSpace_Synthetic.ipynb  EDA.ipynb  GSEA.ipynb  Hierarchical.ipynb  KMeans.ipynb  Leiden.ipynb  Louvain.ipynb  PC.npy  SVI.ipynb  SVI.py  SVI_1000_EPOCHS.py  SVI_Approx.ipynb  SVI_Approx.py  SVI_Approx_Experiment.py  SVI_Approx_Synthetic.ipynb  SVI_Approx_Synthetic.py  SVI_Cells.ipynb  SVI_Experiment.py  SVI_HVG.ipynb  SVI_Spatial.ipynb  SVI_VAE.ipynb  SVI_VAE.py  VSBC.ipynb  VSBC.py  X_pca.npy  backprop_graph  cluster_metrics.ipynb  cluster_metrics.py  cluster_plotting.ipynb  colData.csv  competing_methods.ipynb  dlpfc.ipynb  images.ipynb  mclust.R  mclust.ipynb  model.py  (+15 more)
scripts/: batch_0.sh  batch_1.sh  batch_10.sh  batch_11.sh  batch_12.sh  batch_13.sh  batch_14.sh  batch_15.sh  batch_16.sh  batch_17.sh  batch_18.sh  batch_19.sh  batch_2.sh  batch_20.sh  batch_21.sh  batch_22.sh  batch_23.sh  batch_24.sh  batch_25.sh  batch_26.sh  batch_27.sh  batch_28.sh  batch_29.sh  batch_3.sh  batch_30.sh  batch_31.sh  batch_32.sh  batch_33.sh  batch_34.sh  batch_35.sh  batch_36.sh  batch_37.sh  batch_38.sh  batch_39.sh  batch_4.sh  batch_40.sh  batch_41.sh  batch_42.sh  batch_43.sh  batch_44.sh  (+10 more)
utils/: BayesSpace.py  embeddings.py  metrics.py
