[tool.poetry]
name = "xenium"
version = "0.1.0"
description = ""
authors = ["romankouz <roko@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
requests = "^2.31.0"
h5py = "^3.10.0"
matplotlib = "^3.8.2"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
scanpy = "^1.9.6"
squidpy = "^1.3.1"
tqdm = "^4.66.1"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
