[tool.poetry]
name = "xenium"
version = "0.1.0"
description = ""
authors = ["romankouz <roko@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
requests = "^2.31.0"
h5py = "^3.10.0"
matplotlib = "^3.8.2"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
scanpy = "^1.9.6"
squidpy = "^1.3.1"
tqdm = "^4.66.1"
mypy = "^1.8.0"
python-louvain = "^0.16"
louvain = "^0.8.1"
tifffile = "^2024.2.12"
imagecodecs = "^2024.1.1"
torch = "^2.3.0"
lightning = "^2.2.1"
torchviz = "^0.0.2"
optuna = "^3.6.1"
tensorboard = "^2.16.2"
pytorch-metric-learning = "^2.5.0"
pyro-ppl = "^1.9.0"
ipykernel = "^6.29.4"
scikit-misc = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
